add test case for null created and last updated xref